fixed the assessment category text in footer right is overlapped under footer left content when minimizing windows

--- a/job_seeker/styles.css
+++ b/job_seeker/styles.css
@@ -225,9 +225,9 @@ footer {
     padding-right: 10px;
     flex: 1 1 20%; /* Take full width on smaller screens */
     min-width: 200px; /* Ensure columns don't get too narrow */
-    justify-content: left; /* Center align content */
+    justify-content: center; /* Center align content */
     text-align: center; /* Center align text */
-    order:1;
+
 }
 
 .footer-logo {
@@ -267,11 +267,11 @@ footer {
     flex: 1 1 70%; /* Take approximately two-thirds of the width */
     text-align: center; /* Center align text */
     align-items: right;
-    order:2;
+    padding-right: 20px;
 }
 
 .footer-column {
-    margin: 0 0px;
+    margin: 0 20px;
     flex: 1 1 20%; /* Take approximately one-third of the width */
     min-width: 200px; /* Ensure columns don't get too narrow */
 }
